offlineimap (3.99.6) unstable; urgency=low

  * Beginnings of work to make it work with a threaded Tcl/Tk Tkinter.

 -- John Goerzen <jgoerzen@complete.org>  Thu,  2 Jan 2003 13:59:44 -0600

offlineimap (3.99.5) unstable; urgency=low

  * Added ability to disable expunging on the server.
  * Fixed infinite loop with preauth.  Closes: #169514, #171485.

 -- John Goerzen <jgoerzen@complete.org>  Tue, 03 Dec 2002 06:22:37 -0600

offlineimap (3.99.4) unstable; urgency=low

  * Fixed setup.py installation instructions.
  * Added more debugging to the CRAM-MD5 authentication module.
  * CRAM-MD5 *really* fixed this time.  Thanks to MJ for the patch.
  * Adding missing import os to imapserver.py.  Thanks to John Wiegley
    for catching that.

 -- John Goerzen <jgoerzen@complete.org>  Tue,  5 Nov 2002 08:06:45 -0600

offlineimap (3.99.3) unstable; urgency=low

  * Moved password promting into imapserver.py.  Passwords are now asked
    for on-demand and typos will no longer crash the program (the user
    will be re-prompted).  Closes: #162672.
  * Falls back to plain-text auth if CRAM-MD5 fails.  Fixes [complete.org #42]
  * Fixed CRAM-MD5 auth so it actually works now.

 -- John Goerzen <jgoerzen@complete.org>  Mon,  4 Nov 2002 06:16:11 -0600

offlineimap (3.99.2) unstable; urgency=low

  * Further attempts to fix imapsplit problems.
  * When an exception occurs, OfflineIMAP will attempt to print the last
    50 debug messages, whether or not debugging was enabled for this
    session.  This way, even unexpected and non-repeatable errors stand
    a chance of getting a more detailed log.
  * Handle uidvalidity file in an atomic fashion.  CLoses: #165600.
  * Supports CRAM-MD5 authentication.  Fixes [complete.org #38], and for
    Debian, Closes: #154165.
  * Noted CRAM-MD5 support in the "CONFORMING TO" section of the manual.
  * Certain servers may not always return the UID flag for new messages.
    This causes an OfflineIMAP exception, though rerunning will fix it.