@@ -1,6 +1,10 @@
 offlineimap (3.99.6) unstable; urgency=low
 
   * Beginnings of work to make it work with a threaded Tcl/Tk Tkinter.
+  * Now properly handles folder names that contain parenthesis.  Used
+    patch from Kyler Laird in
+    http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=173895.
+    Closes: #173895.	
 
  -- John Goerzen <jgoerzen@complete.org>  Thu,  2 Jan 2003 13:59:44 -0600
 
